@@ -26,6 +26,7 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'org.asciidoctor.jvm.convert'
+    apply plugin: 'java-test-fixtures'
 
     dependencyManagement {
         imports {
@@ -41,7 +42,7 @@ subprojects {
         testAnnotationProcessor("org.projectlombok:lombok:1.18.42")
         testCompileOnly("org.projectlombok:lombok:1.18.42")
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
+        testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
 
     }
 
@@ -52,6 +53,7 @@ subprojects {
     test {
         useJUnitPlatform {
             excludeTags('develop', 'restdocs')
+            jvmArgs("-XX:+EnableDynamicAgentLoading")
         }
     }
 
